# aegis-clinical

./: .env.example  .gitattributes  .gitignore  LICENSE  Limitations and Tradeoffs.md  Makefile  OTel.md  README.md  clinical_note_ingestion_flow.md  current_plan.md  planned_architecture.md  portfolio_description.md  pyproject.toml  scaffold_db.py  vetted_workflow.md
.github/workflows/: evaluation_harness.yml
data/: seed_icd11.py  verify.py  verifyIcd11.py
docs/: architecture.md  clinical_note_ingestion_flow.md  crewAI_architectural_decision.md  database_design.md  observability.md  testing_and_evaluations.md  tradeoffs_and_limitations.md
evals/: test_state_invariance.py
frontend/: DashboardLayout.md  NewDashboardLayout.md
frontend/src/: App.tsx  main.tsx
frontend/src/api/: client.ts
frontend/src/components/: DiffViewer.tsx
frontend/src/hooks/: usePendingReviews.ts
frontend/src/views/: Dashboard.tsx  ReviewConsole.tsx
src/aegis/: config.py
src/aegis/agents/: lookup.py  parsing.py
src/aegis/agents/crew/: crews.py
src/aegis/agents/tools/: lookup.py
src/aegis/api/: dependencies.py  main.py  physician_review_audit.py
src/aegis/database/: Upstash.md  __init__.py  adapters.py  cli.py  connection.py  database.py  database_ops.py  models.py  planned_database.md  repository.py  seeds.py
src/aegis/graphs/: optimistic_locking.py  state.py  workflow.py
src/aegis/model/: icd11.py  patient_note.py  workflow.py
src/aegis/models/: base.py  clinical_note.py  icd.py  patient.py  review.py  symptom.py  trial.py  workflow.py
src/aegis/schemas/: anonymizer.py  normalization.py  validation.py
src/aegis_clinical/: __init__.py
tests/: test_config.py  test_database_architecture.py  test_schemas.py
tests/api/: test_dependency_providers.py
tests/models/: test_clinical_note.py  test_icd.py  test_patient.py  test_review.py  test_symptom.py  test_trial.py  test_workflow.py
(+26 files in other folders)
