[project]
name = "aegis-clinical"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "crewai>=1.14.7",
    "fastapi>=0.136.3",
    "langchain>=1.3.9",
    "langgraph>=1.2.5",
    "langgraph-checkpoint-sqlite>=3.1.0",
    "nltk>=3.9.4",
    "pydantic-ai>=1.31.0",
    "upstash-redis>=1.7.0",
    "upstash-vector>=0.8.0",
    "uvicorn>=0.49.0",
]

[build-system]
requires = ["uv_build>=0.11.21,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "hypothesis>=6.155.2",
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "ruff>=0.15.17",
]

[tool.ruff]
line-length = 100
select = ["E", "F", "B", "ASYNC", "TCH"]

[tool.ruff.format]
line-ending = "lf"

[tool.ruff.lint.flake8-type-checking]
runtime-evaluated-base-classes = [
    "pydantic.BaseModel",
    "aegis.models.base.DomainModel",
]

[tool.mypy]
strict = true
ignore_missing_imports = true
exclude = ["frontend/"]

[tool.pyright]
extraPaths = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.uv]
package = true

[tool.uv.build-backend]
module-name = "aegis"

[projects.scripts]
aegis-db = "aegis.database.cli.main"
